--- a/feeds.html
+++ b/feeds.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>SeaConnect</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SeaConnect Feeds</title>
 
 <style>
 
@@ -31,7 +30,7 @@ margin-bottom:16px;
 box-shadow:0 10px 30px rgba(0,0,0,.35);
 }
 
-input{
+input,textarea{
 width:100%;
 padding:12px;
 border-radius:14px;
@@ -40,6 +39,10 @@ margin-top:6px;
 box-sizing:border-box;
 background:rgba(255,255,255,0.05);
 color:#fff;
+}
+
+textarea{
+min-height:90px;
 }
 
 button{
@@ -55,40 +58,53 @@ background:linear-gradient(135deg,#3b82f6,#2563eb);
 color:#fff;
 }
 
-.danger{
-background:linear-gradient(135deg,#ef4444,#dc2626);
-color:#fff;
-}
-
-.light{
-background:rgba(255,255,255,0.1);
-color:#fff;
-}
-
 .row{
 display:flex;
 gap:10px;
 margin-top:12px;
 }
 
+.feedPhoto{
+width:100%;
+margin-top:10px;
+border-radius:16px;
+}
+
+.comment{
+padding:8px;
+margin-top:6px;
+background:rgba(255,255,255,0.06);
+border-radius:12px;
+font-size:13px;
+display:flex;
+justify-content:space-between;
+}
+
+.topbar{
+display:flex;
+justify-content:space-between;
+align-items:center;
+margin-bottom:12px;
+}
+
+.title{
+font-size:22px;
+font-weight:900;
+}
+
+.likeBtn{
+background:rgba(255,255,255,0.08);
+color:#fff;
+}
+
+.likeBtn.liked{
+background:rgba(59,130,246,0.25);
+}
+
 .subText{
 font-size:13px;
 color:#94a3b8;
 }
-
-/* ONLINE RING */
-
-.profileRing{
-display:inline-block;
-padding:3px;
-border-radius:50%;
-}
-
-.profileRing.online{
-box-shadow:0 0 0 3px #22c55e;
-}
-
-/* NAV */
 
 .bottomnav{
 position:fixed;
@@ -112,6 +128,7 @@ border:none;
 font-size:12px;
 font-weight:600;
 color:#94a3b8;
+cursor:pointer;
 }
 
 .bottomnav button.active{
@@ -119,12 +136,18 @@ color:#3b82f6;
 font-weight:800;
 }
 
-#profilePhoto{
-width:120px;
-height:120px;
+/* AVATAR */
+
+.avatar{
+width:40px;
+height:40px;
 border-radius:50%;
 object-fit:cover;
-border:4px solid #e5e7eb;
+border:2px solid transparent;
+}
+
+.avatar.online{
+border:2px solid #22c55e;
 }
 
 </style>
@@ -132,50 +155,45 @@ border:4px solid #e5e7eb;
 
 <body>
 
-<!-- PROFILE PAGE -->
+<div id="feedsPage" class="page">
 
-<div id="profilePage" class="page" style="display:block;">
-
-<div style="display:flex;justify-content:space-between;">
-<h2>👤 My Profile</h2>
-<button class="danger" onclick="logout()">Logout</button>
+<div class="topbar">
+<div class="title">📰 Crew Feeds</div>
 </div>
 
-<div class="card" style="text-align:center">
+<div class="card">
 
-<div id="profileRing" class="profileRing">
-
-<img id="profilePhoto"
-src="https://i.ibb.co/2kRZ7Z6/avatar.png">
-
+<div style="font-weight:900;margin-bottom:8px;">
+Create Post
 </div>
 
-<br><br>
+<textarea id="feedInput"
+placeholder="What’s happening on board?"></textarea>
 
-<input type="file" id="photoInput" accept="image/*" style="display:none">
+<input type="file" id="feedPhoto" accept="image/*">
 
-<button class="primary"
-onclick="document.getElementById('photoInput').click()">
-Upload Photo
+<img id="previewPhoto"
+style="width:100%;margin-top:10px;border-radius:16px;display:none;">
+
+<div class="row">
+<button id="postBtn"
+class="primary"
+onclick="createFeed()">
+Post
 </button>
+</div>
 
-<br><br>
-
-<div id="profileName"
-style="font-size:24px;font-weight:900"></div>
-
-<div id="profileRank"
-style="color:#6b7280"></div>
+<div id="postMsg" class="subText"></div>
 
 </div>
 
-</div>
+<div id="feedsList"></div>
 
-<!-- NAVIGATION -->
+</div>
 
 <div class="bottomnav">
 
-<button onclick="location.href='feeds.html'">
+<button class="active">
 📰 Feeds
 </button>
 
@@ -187,7 +205,7 @@ style="color:#6b7280"></div>
 💬 Messages
 </button>
 
-<button class="active">
+<button onclick="location.href='app.html'">
 👤 Profile
 </button>
 
@@ -195,26 +213,29 @@ style="color:#6b7280"></div>
 
 <script type="module">
 
-import { initializeApp } from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { initializeApp }
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
 import {
 getAuth,
-onAuthStateChanged,
-signOut
+onAuthStateChanged
 }
-from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
 import {
 getFirestore,
+collection,
+addDoc,
+query,
+orderBy,
+onSnapshot,
 doc,
 getDoc,
-setDoc,
-updateDoc
+deleteDoc,
+updateDoc,
+where
 }
-from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -226,9 +247,13 @@ const app=initializeApp(firebaseConfig);
 const auth=getAuth(app);
 const db=getFirestore(app);
 
-let currentUID=null;
-
 const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
+
+let currentUID=null;
+let currentEmail="";
+let isPosting=false;
+
+const feedsList=document.getElementById("feedsList");
 
 onAuthStateChanged(auth,async(user)=>{
 
@@ -238,64 +263,46 @@ return;
 }
 
 currentUID=user.uid;
-
-setOnline(true);
-
-loadProfile();
-
-});
-
-async function setOnline(state){
+currentEmail=user.email;
 
 await updateDoc(doc(db,"users",currentUID),{
-online:state,
-lastActive:Date.now()
+online:true,
+lastSeen:Date.now()
 });
 
-}
+loadFeeds();
 
-window.addEventListener("beforeunload",()=>{
-setOnline(false);
 });
 
-async function loadProfile(){
+window.addEventListener("beforeunload",async()=>{
+if(currentUID){
+await updateDoc(doc(db,"users",currentUID),{
+online:false,
+lastSeen:Date.now()
+});
+}
+});
 
-const snap=await getDoc(doc(db,"users",currentUID));
+window.createFeed=async function(){
 
-const d=snap.data()||{};
+if(isPosting) return;
 
-if(d.photo){
-profilePhoto.src=d.photo;
+const text=document.getElementById("feedInput").value.trim();
+const file=document.getElementById("feedPhoto").files[0];
+
+if(!text && !file){
+alert("Write something or add photo");
+return;
 }
 
-profileName.innerText=d.name||"";
-profileRank.innerText=d.rank||"";
+const btn=document.getElementById("postBtn");
+btn.disabled=true;
 
-/* ONLINE RING */
+isPosting=true;
 
-const ring=document.getElementById("profileRing");
+let photoURL="";
 
-if(d.online){
-ring.classList.add("online");
-}else{
-ring.classList.remove("online");
-}
-
-}
-
-document.getElementById("photoInput")
-.addEventListener("change",async function(){
-
-const file=this.files[0];
-if(!file) return;
-
-const reader=new FileReader();
-
-reader.onload=function(e){
-profilePhoto.src=e.target.result;
-};
-
-reader.readAsDataURL(file);
+if(file){
 
 const formData=new FormData();
 formData.append("image",file);
@@ -307,23 +314,150 @@ const res=await fetch(
 
 const data=await res.json();
 
-const imageUrl=data.data.url;
+if(data.success){
+photoURL=data.data.url;
+}
 
-await setDoc(doc(db,"users",currentUID),{
-photo:imageUrl
-},{merge:true});
+}
 
-alert("Photo uploaded successfully");
+const userSnap=await getDoc(doc(db,"users",currentUID));
+const userData=userSnap.data()||{};
+
+await addDoc(collection(db,"feeds"),{
+
+uid:currentUID,
+name:userData.name || currentEmail.split("@")[0],
+rank:userData.rank || "",
+photoProfile:userData.photo || "",
+text:text,
+photo:photoURL,
+likes:[],
+createdAt:Date.now()
 
 });
 
-window.logout=async function(){
+document.getElementById("feedInput").value="";
+document.getElementById("feedPhoto").value="";
+document.getElementById("previewPhoto").style.display="none";
 
-await signOut(auth);
-
-location.href="index.html";
+btn.disabled=false;
+isPosting=false;
 
 };
+
+function loadFeeds(){
+
+const q=query(
+collection(db,"feeds"),
+orderBy("createdAt","desc")
+);
+
+onSnapshot(q,async(snap)=>{
+
+feedsList.innerHTML="";
+
+for(const docSnap of snap.docs){
+
+const d=docSnap.data();
+const id=docSnap.id;
+
+const likesArr=d.likes||[];
+const liked=likesArr.includes(currentUID);
+
+let online=false;
+
+try{
+const userSnap=await getDoc(doc(db,"users",d.uid));
+online=userSnap.data()?.online || false;
+}catch{}
+
+feedsList.innerHTML+=`
+
+<div class="card">
+
+<div style="display:flex;gap:10px;align-items:center;">
+
+<img src="${d.photoProfile || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}"
+class="avatar ${online?'online':''}">
+
+<div>
+<div style="font-weight:900">${d.name}</div>
+<div class="subText">${d.rank||""}</div>
+</div>
+
+</div>
+
+<div style="margin-top:10px">
+${d.text||""}
+</div>
+
+${d.photo?`<img src="${d.photo}" class="feedPhoto">`:""}
+
+<div class="row">
+
+<button class="likeBtn ${liked?"liked":""}"
+onclick="toggleLike('${id}')">
+
+${liked?"💙 Liked":"👍 Like"}
+
+</button>
+
+<span class="subText">
+${likesArr.length} likes
+</span>
+
+</div>
+
+</div>
+
+`;
+
+}
+
+});
+
+}
+
+window.toggleLike=async function(id){
+
+const ref=doc(db,"feeds",id);
+const snap=await getDoc(ref);
+
+let likes=snap.data().likes||[];
+
+if(likes.includes(currentUID)){
+likes=likes.filter(x=>x!==currentUID);
+}else{
+likes.push(currentUID);
+}
+
+await updateDoc(ref,{likes});
+
+};
+
+const photoInput=document.getElementById("feedPhoto");
+
+if(photoInput){
+
+photoInput.addEventListener("change",function(){
+
+const file=this.files[0];
+if(!file) return;
+
+const reader=new FileReader();
+
+reader.onload=function(e){
+
+document.getElementById("previewPhoto").src=e.target.result;
+document.getElementById("previewPhoto").style.display="block";
+
+};
+
+reader.readAsDataURL(file);
+
+});
+
+}
 
 </script>
 
