--- a/app.html
+++ b/app.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,7 +47,6 @@ border:none;
 border-radius:14px;
 font-weight:700;
 cursor:pointer;
-transition:all .2s ease;
 }
 
 .primary{
@@ -70,10 +68,6 @@ color:#fff;
 display:flex;
 gap:10px;
 margin-top:12px;
-}
-
-.row > button{
-flex:1;
 }
 
 .subText{
@@ -112,28 +106,29 @@ font-weight:800;
 
 /* ONLINE RING */
 
-.avatarRing{
-display:inline-flex;
-justify-content:center;
-align-items:center;
-padding:6px;
+.profileRing{
+display:inline-block;
+padding:4px;
 border-radius:50%;
-border:4px solid #22c55e;
-box-shadow:0 0 20px rgba(34,197,94,.6);
 }
 
-#profilePhoto{
-width:120px;
-height:120px;
-border-radius:50%;
-object-fit:cover;
-display:block;
+.profileRing.online{
+border:3px solid #22c55e;
+animation:pulseRing 2s infinite;
+}
+
+@keyframes pulseRing{
+0%{box-shadow:0 0 0 0 rgba(34,197,94,.6);}
+70%{box-shadow:0 0 0 10px rgba(34,197,94,0);}
+100%{box-shadow:0 0 0 0 rgba(34,197,94,0);}
 }
 
 </style>
 </head>
 
 <body>
+
+<!-- PROFILE -->
 
 <div id="profilePage" class="page" style="display:block;">
 
@@ -144,9 +139,12 @@ display:block;
 
 <div class="card" style="text-align:center">
 
-<div class="avatarRing">
+<div id="profileRing" class="profileRing">
+
 <img id="profilePhoto"
-src="https://i.ibb.co/2kRZ7Z6/avatar.png">
+src="https://i.ibb.co/2kRZ7Z6/avatar.png"
+style="width:120px;height:120px;border-radius:50%;object-fit:cover;border:4px solid #e5e7eb;">
+
 </div>
 
 <br><br>
@@ -167,6 +165,8 @@ style="font-size:24px;font-weight:900"></div>
 style="color:#6b7280"></div>
 
 </div>
+
+<!-- PROFESSIONAL INFO -->
 
 <div class="card">
 
@@ -201,10 +201,24 @@ Show
 </div>
 </div>
 
+<div id="documentsList"></div>
+
+</div>
+
+<!-- NAV -->
+
 <div class="bottomnav">
 
 <button onclick="location.href='feeds.html'">
 📰 Feeds
+</button>
+
+<button>
+👥 Friends
+</button>
+
+<button>
+💬 Messages
 </button>
 
 <button class="active">
@@ -215,25 +229,24 @@ Show
 
 <script type="module">
 
-import { initializeApp } from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { initializeApp }
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
 import {
 getAuth,
 onAuthStateChanged,
 signOut
 }
-from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
 import {
 getFirestore,
 doc,
 getDoc,
-setDoc
+setDoc,
+updateDoc
 }
-from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -246,21 +259,6 @@ const auth=getAuth(app);
 const db=getFirestore(app);
 
 let currentUID=null;
-let currentEmail=null;
-
-const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
-
-window.toggleInfo=function(){
-
-const sec=document.getElementById("infoSection");
-const btn=document.getElementById("infoBtn");
-
-const show=sec.style.display==="none";
-
-sec.style.display=show?"block":"none";
-btn.innerText=show?"Hide":"Show";
-
-};
 
 onAuthStateChanged(auth,async(user)=>{
 
@@ -270,16 +268,44 @@ return;
 }
 
 currentUID=user.uid;
-currentEmail=user.email.toLowerCase();
+
+await updateDoc(doc(db,"users",currentUID),{
+online:true,
+lastActive:Date.now()
+});
 
 loadProfile();
+
+});
+
+/* SET OFFLINE WHEN LEAVE PAGE */
+
+window.addEventListener("beforeunload",async()=>{
+
+if(currentUID){
+
+await updateDoc(doc(db,"users",currentUID),{
+online:false,
+lastActive:Date.now()
+});
+
+}
 
 });
 
 async function loadProfile(){
 
 const snap=await getDoc(doc(db,"users",currentUID));
+
 const d=snap.data()||{};
+
+const ring=document.getElementById("profileRing");
+
+if(d.online){
+ring.classList.add("online");
+}else{
+ring.classList.remove("online");
+}
 
 if(d.photo){
 profilePhoto.src=d.photo;
@@ -297,51 +323,15 @@ profileAddress.innerText=d.address||"-";
 
 }
 
-document.getElementById("photoInput")
-.addEventListener("change",async function(){
-
-const file=this.files[0];
-if(!file) return;
-
-const reader=new FileReader();
-
-reader.onload=function(e){
-profilePhoto.src=e.target.result;
-};
-
-reader.readAsDataURL(file);
-
-const formData=new FormData();
-formData.append("image",file);
-
-try{
-
-const res=await fetch(
-"https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
-{method:"POST",body:formData}
-);
-
-const data=await res.json();
-
-const imageUrl=data.data.url;
-
-await setDoc(doc(db,"users",currentUID),{
-photo:imageUrl
-},{merge:true});
-
-alert("Photo uploaded successfully");
-
-}catch(e){
-
-alert("Upload failed");
-
-}
-
-});
-
 window.logout=async function(){
 
+await updateDoc(doc(db,"users",currentUID),{
+online:false,
+lastActive:Date.now()
+});
+
 await signOut(auth);
+
 location.href="index.html";
 
 };
