--- a/feeds.html
+++ b/feeds.html
@@ -1,220 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SeaConnect Feeds</title>
-
-<style>
-
-body{
-margin:0;
-font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
-background:linear-gradient(180deg,#0f172a,#1e293b);
-color:#f1f5f9;
-}
-
-.page{
-display:none;
-padding:20px;
-padding-bottom:95px;
-}
-
-.card{
-background:rgba(255,255,255,0.06);
-backdrop-filter:blur(12px);
-border:1px solid rgba(255,255,255,0.08);
-padding:18px;
-border-radius:22px;
-margin-bottom:16px;
-box-shadow:0 10px 30px rgba(0,0,0,.35);
-}
-
-input,textarea{
-width:100%;
-padding:12px;
-border-radius:14px;
-border:1px solid rgba(255,255,255,0.15);
-margin-top:6px;
-box-sizing:border-box;
-background:rgba(255,255,255,0.05);
-color:#fff;
-}
-
-textarea{
-min-height:90px;
-}
-
-button{
-padding:11px 16px;
-border:none;
-border-radius:14px;
-font-weight:700;
-cursor:pointer;
-}
-
-.primary{
-background:linear-gradient(135deg,#3b82f6,#2563eb);
-color:#fff;
-}
-
-.row{
-display:flex;
-gap:10px;
-margin-top:12px;
-}
-
-.feedPhoto{
-width:100%;
-margin-top:10px;
-border-radius:16px;
-}
-
-.comment{
-padding:8px;
-margin-top:6px;
-background:rgba(255,255,255,0.06);
-border-radius:12px;
-font-size:13px;
-display:flex;
-justify-content:space-between;
-}
-
-.topbar{
-display:flex;
-justify-content:space-between;
-align-items:center;
-margin-bottom:12px;
-}
-
-.title{
-font-size:22px;
-font-weight:900;
-}
-
-.likeBtn{
-background:rgba(255,255,255,0.08);
-color:#fff;
-}
-
-.likeBtn.liked{
-background:rgba(59,130,246,0.25);
-}
-
-.subText{
-font-size:13px;
-color:#94a3b8;
-}
-
-.bottomnav{
-position:fixed;
-bottom:15px;
-left:50%;
-transform:translateX(-50%);
-width:90%;
-height:65px;
-background:rgba(15,23,42,0.9);
-backdrop-filter:blur(10px);
-border-radius:22px;
-display:flex;
-justify-content:space-around;
-align-items:center;
-box-shadow:0 10px 40px rgba(0,0,0,.6);
-}
-
-.bottomnav button{
-background:none;
-border:none;
-font-size:12px;
-font-weight:600;
-color:#94a3b8;
-cursor:pointer;
-}
-
-.bottomnav button.active{
-color:#3b82f6;
-font-weight:800;
-}
-
-/* PROFILE PHOTO */
-
-.avatar{
-width:40px;
-height:40px;
-border-radius:50%;
-object-fit:cover;
-}
-
-.avatar.online{
-border:3px solid #22c55e;
-box-shadow:0 0 10px #22c55e;
-}
-
-</style>
-</head>
-
-<body>
-
-<div id="feedsPage" class="page">
-
-<div class="topbar">
-<div class="title">📰 Crew Feeds</div>
-</div>
-
-<div class="card">
-
-<div style="font-weight:900;margin-bottom:8px;">Create Post</div>
-
-<textarea id="feedInput" placeholder="What’s happening on board?"></textarea>
-
-<input type="file" id="feedPhoto" accept="image/*">
-
-<img id="previewPhoto"
-style="width:100%;margin-top:10px;border-radius:16px;display:none;">
-
-<div class="row">
-<button id="postBtn" class="primary" onclick="createFeed()">Post</button>
-</div>
-
-<div id="postMsg" class="subText"></div>
-
-</div>
-
-<div id="feedsList"></div>
-
-</div>
-
-<div id="friendsPage" class="page">
-<h2>👥 Friends</h2>
-<div class="card subText">Friends feature coming soon</div>
-</div>
-
-<div id="messagesPage" class="page">
-<h2>💬 Messages</h2>
-<div class="card subText">Messenger coming soon</div>
-</div>
-
-<div class="bottomnav">
-
-<button class="active" onclick="showPage('feedsPage',this)">
-📰 Feeds
-</button>
-
-<button onclick="showPage('friendsPage',this)">
+📰 Crew Feeds
+Create Post
+Post
 👥 Friends
-</button>
-
-<button onclick="showPage('messagesPage',this)">
+Friends feature coming soon
 💬 Messages
-</button>
-
-<button onclick="location.href='app.html'">
+Messenger coming soon
+📰 Feeds
+👥 Friends
+💬 Messages
 👤 Profile
-</button>
 
-</div>
-
-<script type="module">
 
 import { initializeApp } 
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
@@ -603,7 +398,3 @@ reader.readAsDataURL(file);
 
 });
 
-</script>
-
-</body>
-</html>
