--- a/feeds.html
+++ b/feeds.html
@@ -1,17 +1,219 @@
-📰 Crew Feeds
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SeaConnect Feeds</title>
+
+<style>
+
+body{
+margin:0;
+font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
+background:linear-gradient(180deg,#0f172a,#1e293b);
+color:#f1f5f9;
+}
+
+.page{
+display:none;
+padding:20px;
+padding-bottom:95px;
+}
+
+.card{
+background:rgba(255,255,255,0.06);
+backdrop-filter:blur(12px);
+border:1px solid rgba(255,255,255,0.08);
+padding:18px;
+border-radius:22px;
+margin-bottom:16px;
+box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+
+input,textarea{
+width:100%;
+padding:12px;
+border-radius:14px;
+border:1px solid rgba(255,255,255,0.15);
+margin-top:6px;
+box-sizing:border-box;
+background:rgba(255,255,255,0.05);
+color:#fff;
+}
+
+textarea{
+min-height:90px;
+}
+
+button{
+padding:11px 16px;
+border:none;
+border-radius:14px;
+font-weight:700;
+cursor:pointer;
+}
+
+.primary{
+background:linear-gradient(135deg,#3b82f6,#2563eb);
+color:#fff;
+}
+
+.row{
+display:flex;
+gap:10px;
+margin-top:12px;
+}
+
+.feedPhoto{
+width:100%;
+margin-top:10px;
+border-radius:16px;
+}
+
+.comment{
+padding:8px;
+margin-top:6px;
+background:rgba(255,255,255,0.06);
+border-radius:12px;
+font-size:13px;
+display:flex;
+justify-content:space-between;
+}
+
+.topbar{
+display:flex;
+justify-content:space-between;
+align-items:center;
+margin-bottom:12px;
+}
+
+.title{
+font-size:22px;
+font-weight:900;
+}
+
+.likeBtn{
+background:rgba(255,255,255,0.08);
+color:#fff;
+}
+
+.likeBtn.liked{
+background:rgba(59,130,246,0.25);
+}
+
+.subText{
+font-size:13px;
+color:#94a3b8;
+}
+
+.bottomnav{
+position:fixed;
+bottom:15px;
+left:50%;
+transform:translateX(-50%);
+width:90%;
+height:65px;
+background:rgba(15,23,42,0.9);
+backdrop-filter:blur(10px);
+border-radius:22px;
+display:flex;
+justify-content:space-around;
+align-items:center;
+box-shadow:0 10px 40px rgba(0,0,0,.6);
+}
+
+.bottomnav button{
+background:none;
+border:none;
+font-size:12px;
+font-weight:600;
+color:#94a3b8;
+cursor:pointer;
+}
+
+.bottomnav button.active{
+color:#3b82f6;
+font-weight:800;
+}
+
+/* AVATAR */
+
+.avatar{
+width:40px;
+height:40px;
+border-radius:50%;
+object-fit:cover;
+border:2px solid transparent;
+}
+
+.avatar.online{
+border:2px solid #22c55e;
+}
+
+</style>
+</head>
+
+<body>
+
+<div id="feedsPage" class="page">
+
+<div class="topbar">
+<div class="title">📰 Crew Feeds</div>
+</div>
+
+<div class="card">
+
+<div style="font-weight:900;margin-bottom:8px;">
 Create Post
+</div>
+
+<textarea id="feedInput"
+placeholder="What’s happening on board?"></textarea>
+
+<input type="file" id="feedPhoto" accept="image/*">
+
+<img id="previewPhoto"
+style="width:100%;margin-top:10px;border-radius:16px;display:none;">
+
+<div class="row">
+<button id="postBtn"
+class="primary"
+onclick="createFeed()">
 Post
-👥 Friends
-Friends feature coming soon
-💬 Messages
-Messenger coming soon
+</button>
+</div>
+
+<div id="postMsg" class="subText"></div>
+
+</div>
+
+<div id="feedsList"></div>
+
+</div>
+
+<div class="bottomnav">
+
+<button class="active">
 📰 Feeds
+</button>
+
+<button>
 👥 Friends
+</button>
+
+<button>
 💬 Messages
+</button>
+
+<button onclick="location.href='app.html'">
 👤 Profile
+</button>
 
+</div>
 
-import { initializeApp } 
+<script type="module">
+
+import { initializeApp }
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
 import {
@@ -53,24 +255,6 @@ let isPosting=false;
 
 const feedsList=document.getElementById("feedsList");
 
-/* NAV */
-
-window.showPage=function(id,btn){
-
-document.querySelectorAll(".page")
-.forEach(p=>p.style.display="none");
-
-document.querySelectorAll(".bottomnav button")
-.forEach(b=>b.classList.remove("active"));
-
-document.getElementById(id).style.display="block";
-
-if(btn) btn.classList.add("active");
-
-};
-
-/* AUTH */
-
 onAuthStateChanged(auth,async(user)=>{
 
 if(!user){
@@ -81,51 +265,40 @@ return;
 currentUID=user.uid;
 currentEmail=user.email;
 
-/* SET ONLINE */
-
 await updateDoc(doc(db,"users",currentUID),{
 online:true,
 lastSeen:Date.now()
 });
 
-showPage("feedsPage");
-
 loadFeeds();
 
 });
 
-/* SET OFFLINE WHEN LEAVING */
-
 window.addEventListener("beforeunload",async()=>{
-
 if(currentUID){
 await updateDoc(doc(db,"users",currentUID),{
 online:false,
 lastSeen:Date.now()
 });
 }
-
 });
-
-/* CREATE POST */
 
 window.createFeed=async function(){
 
 if(isPosting) return;
 
-const btn=document.getElementById("postBtn");
-const msg=document.getElementById("postMsg");
-
-isPosting=true;
-
-btn.disabled=true;
-btn.innerText="Posting...";
-msg.innerText="Uploading...";
-
-try{
-
 const text=document.getElementById("feedInput").value.trim();
 const file=document.getElementById("feedPhoto").files[0];
+
+if(!text && !file){
+alert("Write something or add photo");
+return;
+}
+
+const btn=document.getElementById("postBtn");
+btn.disabled=true;
+
+isPosting=true;
 
 let photoURL="";
 
@@ -167,39 +340,23 @@ document.getElementById("feedInput").value="";
 document.getElementById("feedPhoto").value="";
 document.getElementById("previewPhoto").style.display="none";
 
-msg.innerText="✅ Posted";
-
 btn.disabled=false;
-btn.innerText="Post";
-
 isPosting=false;
-
-setTimeout(()=>msg.innerText="",2000);
-
-}catch(e){
-
-alert("Post failed");
-
-btn.disabled=false;
-btn.innerText="Post";
-
-isPosting=false;
-
-}
 
 };
 
-/* LOAD FEEDS */
-
 function loadFeeds(){
 
-const q=query(collection(db,"feeds"),orderBy("createdAt","desc"));
+const q=query(
+collection(db,"feeds"),
+orderBy("createdAt","desc")
+);
 
-onSnapshot(q,(snap)=>{
+onSnapshot(q,async(snap)=>{
 
 feedsList.innerHTML="";
 
-snap.forEach(async docSnap=>{
+for(const docSnap of snap.docs){
 
 const d=docSnap.data();
 const id=docSnap.id;
@@ -207,14 +364,11 @@ const id=docSnap.id;
 const likesArr=d.likes||[];
 const liked=likesArr.includes(currentUID);
 
-/* GET ONLINE STATUS */
-
 let online=false;
 
 try{
 const userSnap=await getDoc(doc(db,"users",d.uid));
-const userData=userSnap.data();
-online=userData?.online || false;
+online=userSnap.data()?.online || false;
 }catch{}
 
 feedsList.innerHTML+=`
@@ -224,16 +378,18 @@ feedsList.innerHTML+=`
 <div style="display:flex;gap:10px;align-items:center;">
 
 <img src="${d.photoProfile || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}"
-class="avatar ${online ? 'online' : ''}">
+class="avatar ${online?'online':''}">
 
 <div>
 <div style="font-weight:900">${d.name}</div>
-<div class="subText">${d.rank || ""}</div>
+<div class="subText">${d.rank||""}</div>
 </div>
 
 </div>
 
-<div style="margin-top:10px">${d.text||""}</div>
+<div style="margin-top:10px">
+${d.text||""}
+</div>
 
 ${d.photo?`<img src="${d.photo}" class="feedPhoto">`:""}
 
@@ -246,21 +402,9 @@ ${liked?"💙 Liked":"👍 Like"}
 
 </button>
 
-<span class="subText">${likesArr.length} likes</span>
-
-${d.uid===currentUID?`
-<button class="danger" onclick="deletePost('${id}')">Delete</button>
-`:""}
-
-</div>
-
-<div style="margin-top:10px">
-
-<input id="commentInput-${id}" placeholder="Write comment">
-
-<button onclick="sendComment('${id}')">Send</button>
-
-<div id="comments-${id}"></div>
+<span class="subText">
+${likesArr.length} likes
+</span>
 
 </div>
 
@@ -268,15 +412,11 @@ ${d.uid===currentUID?`
 
 `;
 
-loadComments(id);
-
-});
+}
 
 });
 
 }
-
-/* LIKE */
 
 window.toggleLike=async function(id){
 
@@ -295,94 +435,13 @@ await updateDoc(ref,{likes});
 
 };
 
-/* DELETE POST */
+const photoInput=document.getElementById("feedPhoto");
 
-window.deletePost=async function(id){
+if(photoInput){
 
-if(confirm("Delete post?")){
-await deleteDoc(doc(db,"feeds",id));
-}
-
-};
-
-/* COMMENTS */
-
-window.sendComment=async function(feedId){
-
-const input=document.getElementById("commentInput-"+feedId);
-const text=input.value.trim();
-
-if(!text) return;
-
-await addDoc(collection(db,"comments"),{
-
-feedId:feedId,
-uid:currentUID,
-name:"User",
-text:text,
-createdAt:Date.now()
-
-});
-
-input.value="";
-
-};
-
-function loadComments(feedId){
-
-const q=query(collection(db,"comments"),where("feedId","==",feedId));
-
-onSnapshot(q,(snap)=>{
-
-const box=document.getElementById("comments-"+feedId);
-
-if(!box) return;
-
-box.innerHTML="";
-
-snap.forEach(docSnap=>{
-
-const d=docSnap.data();
-
-box.innerHTML+=`
-
-<div class="comment">
-
-<div>
-<b>${d.name}</b>: ${d.text}
-</div>
-
-${d.uid===currentUID?`
-<button class="danger"
-onclick="deleteComment('${docSnap.id}')">
-Delete
-</button>
-`:""}
-
-</div>
-
-`;
-
-});
-
-});
-
-}
-
-window.deleteComment=async function(id){
-
-if(confirm("Delete comment?")){
-await deleteDoc(doc(db,"comments",id));
-}
-
-};
-
-/* IMAGE PREVIEW */
-
-document.getElementById("feedPhoto").addEventListener("change",function(){
+photoInput.addEventListener("change",function(){
 
 const file=this.files[0];
-
 if(!file) return;
 
 const reader=new FileReader();
@@ -398,3 +457,9 @@ reader.readAsDataURL(file);
 
 });
 
+}
+
+</script>
+
+</body>
+</html>
